[gd_scene load_steps=5 format=3 uid="uid://b25rlnwqc6j8v"]

[ext_resource type="Theme" uid="uid://up11cs5tn8xo" path="res://menus/menu_theme.tres" id="1_eoo32"]
[ext_resource type="Texture2D" uid="uid://xm6v7e18cykl" path="res://menus/main_menu/main_menu.png" id="2_2tk48"]
[ext_resource type="Script" path="res://menus/main_menu/main_menu.gd" id="3_2c6nf"]
[ext_resource type="PackedScene" uid="uid://bbsiioc3l5os6" path="res://menus/class_selection/class_selection.tscn" id="4_x7xjy"]

[node name="MainMenu" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_eoo32")
texture = ExtResource("2_2tk48")
script = ExtResource("3_2c6nf")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -262.0
offset_right = 395.0
offset_bottom = -54.0
grow_vertical = 0

[node name="StartGame" type="Button" parent="MainButtons"]
layout_mode = 2
text = "Dive in"

[node name="Options" type="Button" parent="MainButtons"]
layout_mode = 2
text = "Options"

[node name="Controls" type="Button" parent="MainButtons"]
layout_mode = 2
text = "Controls"

[node name="Quit" type="Button" parent="MainButtons"]
layout_mode = 2
text = "Quit"

[node name="ClassSelection" parent="." instance=ExtResource("4_x7xjy")]
visible = false
offset_left = 60.0
offset_top = 278.0
offset_right = 395.0
offset_bottom = 493.0

[connection signal="pressed" from="MainButtons/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MainButtons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainButtons/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MainButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="back_pressed" from="ClassSelection" to="." method="_on_class_selection_back_pressed"]
